Fix wrong size similar item thumbs on mobile

--- a/_core_small.scss
+++ b/_core_small.scss
@@ -154,7 +154,7 @@ ul#navbar {
         }
     }
 }
-.grid-item {
+.grid-item, #similar-items .grid-item {
     width: calc(100% - 2px);
     margin: 0;
 }
